// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`translation verify should fail under strict when translations are missing 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Translation key missing: st_medkit_name fra in st_items.json",
    "Translation key missing: st_bread_name fra in st_items.json",
    "Translation key missing: st_medkit_name ita in st_items.json",
    "Translation key missing: st_bread_name ita in st_items.json",
    "Translation key missing: st_medkit_name pol in st_items.json",
    "Translation key missing: st_bread_name pol in st_items.json",
    "Translation key missing: st_medkit_name rus in st_items.json",
    "Translation key missing: st_bread_name rus in st_items.json",
    "Translation key missing: st_medkit_name spa in st_items.json",
    "Translation key missing: st_bread_name spa in st_items.json",
    "Translation key missing: st_medkit_name ukr in st_items.json",
    "Translation key missing: st_ui_start fra in st_ui.json",
    "Translation key missing: st_ui_quit fra in st_ui.json",
    "Translation key missing: st_ui_start ger in st_ui.json",
    "Translation key missing: st_ui_quit ger in st_ui.json",
    "Translation key missing: st_ui_start ita in st_ui.json",
    "Translation key missing: st_ui_quit ita in st_ui.json",
    "Translation key missing: st_ui_start pol in st_ui.json",
    "Translation key missing: st_ui_quit pol in st_ui.json",
    "Translation key missing: st_ui_start rus in st_ui.json",
    "Translation key missing: st_ui_quit rus in st_ui.json",
    "Translation key missing: st_ui_start spa in st_ui.json",
    "Translation key missing: st_ui_quit spa in st_ui.json",
    "Translation key missing: st_ui_quit ukr in st_ui.json",
    "Check failed: 24 finding(s)",
  ],
  "stdout": [
    "Verifying translations in <resources>/translations (ContainingInstallation), language - all",
    "Verifying 2 translation source(s)",
    "Verified translation files in <duration>, 4 checked, 24 missing",
  ],
}
`;

exports[`translation verify should find nothing missing in a complete language 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Verifying translations in <resources>/translations (ContainingInstallation), language - eng",
    "Verifying 2 translation source(s)",
    "Verified translation files in <duration>, 4 checked, 0 missing",
  ],
}
`;

exports[`translation verify should report gaps across every language 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Translation key missing: st_medkit_name fra in st_items.json",
    "Translation key missing: st_bread_name fra in st_items.json",
    "Translation key missing: st_medkit_name ita in st_items.json",
    "Translation key missing: st_bread_name ita in st_items.json",
    "Translation key missing: st_medkit_name pol in st_items.json",
    "Translation key missing: st_bread_name pol in st_items.json",
    "Translation key missing: st_medkit_name rus in st_items.json",
    "Translation key missing: st_bread_name rus in st_items.json",
    "Translation key missing: st_medkit_name spa in st_items.json",
    "Translation key missing: st_bread_name spa in st_items.json",
    "Translation key missing: st_medkit_name ukr in st_items.json",
    "Translation key missing: st_ui_start fra in st_ui.json",
    "Translation key missing: st_ui_quit fra in st_ui.json",
    "Translation key missing: st_ui_start ger in st_ui.json",
    "Translation key missing: st_ui_quit ger in st_ui.json",
    "Translation key missing: st_ui_start ita in st_ui.json",
    "Translation key missing: st_ui_quit ita in st_ui.json",
    "Translation key missing: st_ui_start pol in st_ui.json",
    "Translation key missing: st_ui_quit pol in st_ui.json",
    "Translation key missing: st_ui_start rus in st_ui.json",
    "Translation key missing: st_ui_quit rus in st_ui.json",
    "Translation key missing: st_ui_start spa in st_ui.json",
    "Translation key missing: st_ui_quit spa in st_ui.json",
    "Translation key missing: st_ui_quit ukr in st_ui.json",
  ],
  "stdout": [
    "Verifying translations in <resources>/translations (ContainingInstallation), language - all",
    "Verifying 2 translation source(s)",
    "Verified translation files in <duration>, 4 checked, 24 missing",
  ],
}
`;

exports[`translation verify should report the gaps it found 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "translation",
    "verify",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "checkedTranslationsCount": 4,
    "checks": [
      {
        "duration": "<duration>",
        "findings": [
          {
            "message": "Missing translation for key 'st_bread_name' in language 'fra'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'ita'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'pol'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'rus'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'spa'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'fra'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'ita'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'pol'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'rus'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'spa'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'ukr'",
            "ruleId": "translations.missing",
            "subject": "st_items.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'fra'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'ger'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'ita'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'pol'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'rus'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'spa'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'ukr'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'fra'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'ger'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'ita'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'pol'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'rus'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'spa'",
            "ruleId": "translations.missing",
            "subject": "st_ui.json",
          },
        ],
        "id": "translations",
        "status": "failed",
      },
    ],
    "duration": "<duration>",
    "languages": [
      {
        "checked": 2,
        "file": "st_items.json",
        "language": "eng",
        "missing": 0,
      },
      {
        "checked": 2,
        "file": "st_items.json",
        "language": "fra",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_items.json",
        "language": "ger",
        "missing": 0,
      },
      {
        "checked": 2,
        "file": "st_items.json",
        "language": "ita",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_items.json",
        "language": "pol",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_items.json",
        "language": "rus",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_items.json",
        "language": "spa",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_items.json",
        "language": "ukr",
        "missing": 1,
      },
      {
        "checked": 2,
        "file": "st_ui.json",
        "language": "eng",
        "missing": 0,
      },
      {
        "checked": 2,
        "file": "st_ui.json",
        "language": "fra",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_ui.json",
        "language": "ger",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_ui.json",
        "language": "ita",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_ui.json",
        "language": "pol",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_ui.json",
        "language": "rus",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_ui.json",
        "language": "spa",
        "missing": 2,
      },
      {
        "checked": 2,
        "file": "st_ui.json",
        "language": "ukr",
        "missing": 1,
      },
    ],
    "missingTranslationsCount": 24,
    "status": "failed",
  },
}
`;

exports[`translation verify should write a structured report 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Translation key missing: st_medkit_name fra in st_items.json",
    "Translation key missing: st_bread_name fra in st_items.json",
    "Translation key missing: st_medkit_name ita in st_items.json",
    "Translation key missing: st_bread_name ita in st_items.json",
    "Translation key missing: st_medkit_name pol in st_items.json",
    "Translation key missing: st_bread_name pol in st_items.json",
    "Translation key missing: st_medkit_name rus in st_items.json",
    "Translation key missing: st_bread_name rus in st_items.json",
    "Translation key missing: st_medkit_name spa in st_items.json",
    "Translation key missing: st_bread_name spa in st_items.json",
    "Translation key missing: st_medkit_name ukr in st_items.json",
    "Translation key missing: st_ui_start fra in st_ui.json",
    "Translation key missing: st_ui_quit fra in st_ui.json",
    "Translation key missing: st_ui_start ger in st_ui.json",
    "Translation key missing: st_ui_quit ger in st_ui.json",
    "Translation key missing: st_ui_start ita in st_ui.json",
    "Translation key missing: st_ui_quit ita in st_ui.json",
    "Translation key missing: st_ui_start pol in st_ui.json",
    "Translation key missing: st_ui_quit pol in st_ui.json",
    "Translation key missing: st_ui_start rus in st_ui.json",
    "Translation key missing: st_ui_quit rus in st_ui.json",
    "Translation key missing: st_ui_start spa in st_ui.json",
    "Translation key missing: st_ui_quit spa in st_ui.json",
    "Translation key missing: st_ui_quit ukr in st_ui.json",
  ],
  "stdout": [
    "Verifying translations in <resources>/translations (ContainingInstallation), language - all",
    "Verifying 2 translation source(s)",
    "Verified translation files in <duration>, 4 checked, 24 missing",
  ],
}
`;

exports[`translation verify should write only the report 1`] = `
[
  {
    "path": "report.json",
    "sha256": "78902fd0410b45ee6b5d6b344ad05587b796c91f9cc99a1c77bd861c3f0f2df5",
    "size": 7353,
  },
]
`;
